<resources>
    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add First Item</string>
    <string name="popup_title">Enter New Shopping Item</string>
    <string name="grocery_item">Item Name</string>
    <string name="grocery_quantity">Quantity</string>
    <string name="save_button">Save</string>
    <string name="title_activity_list">Shopping List</string>
    <string name="item_name">Item Name</string>
    <string name="qtyText">Qty:</string>
    <string name="date_added_on">Added On:</string>
    <string name="delete_text">Are You Sure ?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
</resources>
