<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp" >
        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="italic"
                android:text="@string/popup_title" />

            <EditText
                android:id="@+id/itemNameID"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/title"
                android:paddingLeft="15dp"
                android:paddingRight="2dp"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/input_text_background"
                android:layout_marginTop="20dp"
                android:hint="@string/grocery_item"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/itemQuantityID"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/itemNameID"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:paddingRight="2dp"
                android:background="@drawable/input_text_background"
                android:layout_marginTop="15dp"
                android:hint="@string/grocery_quantity"
                android:inputType="number|numberDecimal" />

            <Button
                android:id="@+id/save_item_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemQuantityID"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:text="@string/save_button"
                android:textColor="#FFF"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>