<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="23dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:paddingTop="5dp"
                android:text="@string/delete_text"/>

            <Button
                android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textAlert"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_background"
                android:text="@string/yes_button"
                android:textColor="#FFF"
                android:textStyle="bold" />
            <Button
                android:id="@+id/no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/textAlert"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_background"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:text="@string/no_button"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>